Upgraded gradle to 4.2.1 (more Java 9 compatible) and updated the documentation on pre-Java 9 and Java 9 run command usages.